# lib/STSExampleHandler.js
@@ -1,82 +1,120 @@
 'use strict';
 
-let preq = require('preq');
-
 let chai = require('chai');
 let chaiSubset = require('chai-subset');
 chai.use(chaiSubset);
 
+let STSAuthHelper = require('./STSAuthHelper');
 let STSSchemaValidator = require('./STSSchemaValidator');
 
 module.exports = STSExampleHandler;
 
-function STSExampleHandler(spec) {
-    this.spec = spec;
+/**
+ * Create new handler instance
+ * @param spec
+ * @param client
+ * @constructor
+ */
+function STSExampleHandler(spec, client) {
+    this.client = client;
+    this.clientAuthorizations = STSAuthHelper.parse(client);
     this.schemaValidator = new STSSchemaValidator(spec);
 }
 
-STSExampleHandler.prototype.handle = function (example) {
-    this.substituteUrlParameters(example);
-    this.addAuth(example);
-    let validator = this.getValidator(example);
-    return preq[example.request.method](example.request).then(validator, validator);
+/**
+ * Handle given example
+ * @param operation
+ * @param responseCode
+ * @param example
+ * @returns {Promise}
+ */
+STSExampleHandler.prototype.handle = function (operation, responseCode, example) {
+    example = this.normalizeExample(responseCode, example);
+    let validator = this.getValidator(operation, responseCode, example);
+    let request = this.buildRequest(operation, example);
+    return this.client.default[operation.nickname](request,
+        example.auth ? { clientAuthorizations: this.clientAuthorizations } : null
+    ).then(validator, validator);
 };
 
-STSExampleHandler.prototype.substituteUrlParameters = function (example) {
-    let specMethodParameters = this.spec.paths[example.specPath][example.specMethod].parameters;
-    let request = example.request;
-    if (!specMethodParameters || !request.parameters) return;
-    for (let param of specMethodParameters) {
-        if (param.in == 'path' && request.parameters[param.name]) {
-            request.uri = request.uri.replace('{' + param.name + '}', request.parameters[param.name]);
-            delete request.parameters[param.name];
-        }
-    }
+/**
+ * Normalize example by creating default empty fields and adding responseCode and response.status
+ * @param responseCode
+ * @param example
+ * @returns {*}
+ */
+STSExampleHandler.prototype.normalizeExample = function (responseCode, example) {
+    example = JSON.parse(JSON.stringify(example));
+    if (!example.request) example.request = {};
+    if (!example.request.parameters) example.request.parameters = {};
+    if (!example.request.headers) example.request.headers = {};
+    if (!example.response) example.response = {};
+    if (!example.response.status) example.response.status = parseInt(responseCode);
+    return example;
 };
 
-STSExampleHandler.prototype.addAuth = function (example) {
-    let specMethodSecurity = this.spec.paths[example.specPath][example.specMethod].security;
-    if (!example.auth || !this.spec.securityDefinitions) return;
-    let securities = specMethodSecurity.map(function (security) {
-        return Object.keys(security);
-    });
-    securities = [].concat.apply([], securities);
-    for (let security of securities) {
-        let auth = this.spec.securityDefinitions[security];
-        if (!auth['x-ample']) continue;
-        if (auth.type != 'basic' && auth.in != 'header') continue; // other types not supported just yet
-        let headerName = auth.name || 'Authorization';
-        example.request.headers[headerName] = auth['x-ample'];
-    }
-};
-
-STSExampleHandler.prototype.getValidator = function (example) {
+/**
+ * Get validator function for given example
+ * @param operation
+ * @param responseCode
+ * @param example
+ * @returns {Function}
+ */
+STSExampleHandler.prototype.getValidator = function (operation, responseCode, example) {
     let self = this;
     return function (resp) {
-        return self.doValidate(example, resp);
+        return self.doValidate(operation, responseCode, example, resp);
     }
 };
 
-STSExampleHandler.prototype.doValidate = function (example, response) {
+/**
+ * Build request for given example
+ * @param operation
+ * @param example
+ */
+STSExampleHandler.prototype.buildRequest = function (operation, example) {
+    let request = this.buildDefaultRequest(operation);
+    request = Object.assign(request, example.request.headers);
+    request = Object.assign(request, example.request.parameters);
+    request = Object.assign(request, { body: example.request.body });
+    return request;
+};
+
+/**
+ * Build default request for given operation
+ * @param operation
+ * @returns {{}}
+ */
+STSExampleHandler.prototype.buildDefaultRequest = function (operation) {
+    let request = {};
+    if (operation.parameters) {
+        for (let parameter of operation.parameters) {
+            if (parameter['x-ample']) {
+                request[parameter.name] = parameter['x-ample'];
+            }
+        }
+    }
+    return request;
+};
+
+STSExampleHandler.prototype.doValidate = function (operation, responseCode, example, response) {
+    //noinspection JSUnresolvedVariable
     chai.expect(response).to.containSubset(example.response);
-    if (example.authProviderFor) {
-        this.dispatchAuth(example.authProviderFor, response);
-    }
-    let specResponseSchema = this.spec.paths[example.specPath][example.specMethod].responses[example.specCode].schema;
-    if (specResponseSchema && specResponseSchema['$ref'] && response.body) {
-        return this.schemaValidator.validate(specResponseSchema['$ref'], response.body);
-    }
+    this.dispatchAuth(example, response);
+    return this.schemaValidator.validate(operation, responseCode, response);
 };
 
-STSExampleHandler.prototype.dispatchAuth = function (exampleStrategies, response) {
+STSExampleHandler.prototype.dispatchAuth = function (example, response) {
+    let authProviderFor = example.authProviderFor;
+    if (!authProviderFor) return;
     //noinspection JSUnusedLocalSymbols
     let headers = response.headers;
     //noinspection JSUnusedLocalSymbols
-    let body = response.body;
-    for (let strategyName of Object.keys(exampleStrategies)) {
-        if (this.spec.securityDefinitions[strategyName] && exampleStrategies[strategyName]['x-ample']) {
-            this.spec.securityDefinitions[strategyName]['x-ample'] =
-                eval('`' + exampleStrategies[strategyName]['x-ample'] + '`');
+    let obj = response.obj;
+    for (let strategyName of Object.keys(authProviderFor)) {
+        if (this.client.securityDefinitions[strategyName] && authProviderFor[strategyName]['x-ample']) {
+            STSAuthHelper.add(this.client, this.clientAuthorizations, strategyName,
+                eval('`' + authProviderFor[strategyName]['x-ample'] + '`'));
         }
     }
 };
